apps/mailu/base/configns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailu
