apps/mailu/base/clamav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-antivirus
  namespace: mailu
spec:
  selector:
    matchLabels:
      app: antivirus
  template:
    metadata:
      labels:
        app: antivirus
    spec:
      containers:
      - name: antivirus
        image: clamav/clamav-debian:1.4
        livenessProbe:
          exec:
            command: 
            - /bin/sh
            - -c
            - "kill -0 `cat /tmp/clamd.pid`"
          initialDelaySeconds: 20
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: clamav-data
          mountPath: /var/lib/clamav
      volumes:
      - name: clamav-data
        persistentVolumeClaim:
          claimName: mailu-clamav-pvc
