apps/mailu/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-front
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels: { app: mailu-front }
  template:
    metadata: { labels: { app: mailu-front } }
    spec:
      containers:
      - name: front
        image: ghcr.io/mailu/nginx:2024.06
        ports:
        - containerPort: 80
        - containerPort: 25
        - containerPort: 465
        - containerPort: 587
        - containerPort: 110
        - containerPort: 995
        - containerPort: 143
        - containerPort: 993
        - containerPort: 4190
        volumeMounts:
        - name: certs
          mountPath: /certs
      volumes:
      - name: certs
        persistentVolumeClaim: { claimName: mailu-data-pvc }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-imap
  namespace: mailu
spec:
  selector: { matchLabels: { app: mailu-imap } }
  template:
    metadata: { labels: { app: mailu-imap } }
    spec:
      containers:
      - name: imap
        image: ghcr.io/mailu/dovecot:2024.06
        volumeMounts:
        - name: mail
          mountPath: /mail
      volumes:
      - name: mail
        persistentVolumeClaim: { claimName: mailu-mail-pvc }
