apps/mailu/base/deployment_admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-admin
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailu-admin
  template:
    metadata:
      labels:
        app: mailu-admin
    spec:
      serviceAccountName: mailu-admin-sa
      containers:
        - name: admin
          securityContext:
            runAsUser: 0
            privileged: false # Keep it false for security, but user must be 0
          image: ghcr.io/mailu/admin:2.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mailu-data-pvc
