apps/mailu/base/deployment_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-front
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailu-front
  template:
    metadata:
      labels:
        app: mailu-front
    spec:
      containers:
        - name: front
          image: ghcr.io/mailu/nginx:2.0
          volumeMounts:
            - name: mailu-config
              mountPath: /mailu.env
              subPath: config.env
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 25
            - containerPort: 465
            - containerPort: 587
            - containerPort: 143
            - containerPort: 993
      volumes:
        - name: mailu-config
          configMap:
            name: mailu-config
