apps/mailu/base/deployment_rspamd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-rspamd
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailu-rspamd
  template:
    metadata:
      labels:
        app: mailu-rspamd
    spec:
      containers:
        - name: rspamd
          image: ghcr.io/mailu/rspamd:2.0
          volumeMounts:
            - name: rspamd-storage
              mountPath: /var/lib/rspamd
      volumes:
        - name: rspamd-storage
          persistentVolumeClaim:
            claimName: mailu-rspamd-storage
