apps/mailu/base/postfix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-smtp
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailu-smtp
  template:
    metadata:
      labels:
        app: mailu-smtp
    spec:
      containers:
      - name: smtp
        image: ghcr.io/mailu/postfix:2024.06
        volumeMounts:
        - name: mailqueue
          mountPath: /queue
      volumes:
      - name: mailqueue
        emptyDir: {}
