apps/mailu/base/roundcube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-webmail
  namespace: mailu
spec:
  selector:
    matchLabels:
      app: mailu-webmail
  template:
    metadata:
      labels:
        app: mailu-webmail
    spec:
      containers:
      - name: webmail
        image: ghcr.io/mailu/webmail:2024.06
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mailu-webmail-pvc
