apps/mailu/base/rspamd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-antispam
  namespace: mailu
spec:
  selector:
    matchLabels:
      app: mailu-antispam
  template:
    metadata:
      labels:
        app: mailu-antispam
    spec:
      containers:
      - name: antispam
        image: ghcr.io/mailu/rspamd:2024.06
        volumeMounts:
        - name: filter
          mountPath: /var/lib/rspamd
      volumes:
      - name: filter
        persistentVolumeClaim:
          claimName: mailu-filter-pvc
