apps/mailu/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-front
  namespace: mailu
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local 
  selector:
    app: mailu-front # Keep this as front; it is the entry point
  ports:
  - name: smtp
    port: 25
    targetPort: 25
  - name: smtps
    port: 465
    targetPort: 465
  - name: submission
    port: 587
    targetPort: 587
  - name: imap
    port: 143
    targetPort: 143
  - name: imaps
    port: 993
    targetPort: 993
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
