apps/mailu/base/service_admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-admin
  namespace: mailu
spec:
  selector:
    app: mailu-admin
  ports:
    - port: 80
      targetPort: 80
