apps/mailu/base/service_dovecot.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-dovecot
  namespace: mailu
spec:
  selector:
    app: mailu-dovecot
  ports:
    - name: imap
      port: 143
      targetPort: 143
