apps/mailu/base/service_postfix.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-smtp # Must match what front expects or what is in config
  namespace: mailu
spec:
  selector:
    app: mailu-smtp
  ports:
    - name: smtp
      port: 25
      targetPort: 25
