apps/mailu/base/service_rspamd.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-rspamd
  namespace: mailu
spec:
  selector:
    app: mailu-rspamd
  ports:
    - port: 11334
      targetPort: 11334
