apps/mailu/base/unbound.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-resolver
  namespace: mailu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailu-resolver
  template:
    metadata:
      labels:
        app: mailu-resolver
    spec:
      containers:
      - name: resolver
        image: ghcr.io/mailu/unbound:2024.06
---
apiVersion: v1
kind: Service
metadata:
  name: resolver
  namespace: mailu
spec:
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app: mailu-resolver
